# RockPaperScissor_AI

./: .gitignore  README.md  app.py  db_setup.py  pipeline.txt  pyproject.toml  requirements.txt  test.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  dynamodb-setup.sh
RockPaperScissor/: __init__.py  app.py
RockPaperScissor/config/: .gitkeep  database.py
RockPaperScissor/database/: __init__.py  db.py
RockPaperScissor/game_cache/: __init__.py  llm_cache.py  memory_cache.py
RockPaperScissor/models/: __init__.py  adaptive_markov_ai.py  ai_manager.py  base_ai.py  markov_ai.py  pattern_ai.py  random_ai.py
RockPaperScissor/repositories/: .gitkeep  __init__.py  combined_storage.py  db.py  fallback_storage.py  game_repository.py  s3_storage.py  sql_storage.py  storage.py
RockPaperScissor/routes/: __init__.py  game.py  history.py  stats.py
RockPaperScissor/schemas/: game.py
RockPaperScissor/services/: __init__.py  game_service.py  game_service_class.py  llm_service.py  service_instance.py
RockPaperScissor/test/: sql_test.py  test_manual_db.sqlite
RockPaperScissor/utils/: __init__.py  logging.py
data/: game_history.db
frontend/: index.html  test_front.html  webpage.html
