[tool.poetry]
name = "RockPaperScissor"
version = "0.1.0"
description = "A serverless Rock Paper Scissors AI game using FastAPI and AWS Lambda"
authors = ["Pepper-Knight <yiyiang.chi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "^1.24.0"
mangum = "^0.14.0"
uvicorn = "^0.15.0"
fastapi = ">=0.100"
pydantic = ">=2.0"
numpy = "^2.2.3"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

