[tool.poetry]
name = "RockPaperScissor"
version = "0.1.0"
description = "A serverless Rock Paper Scissors AI game"
authors = ["Pepper-Knight <yiyiang.chi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
boto3 = "^1.24.0"
mangum = "^0.14.0"
uvicorn = "^0.15.0"
pydantic = "^2.6.0"
numpy = "^2.2.3"
dotenv = "^0.9.9"
huggingface-hub = "^0.30.2"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

